--- a/css_5/css_5/css_5/index.html
+++ b/css_5/css_5/css_5/index.html
@@ -1,7 +1,7 @@
 <!-- Сообщаем браузеру как стоит обрабатывать эту страницу -->
 <!DOCTYPE html>
 <!-- Оболочка документа, указываем язык содержимого -->
-<html lang="ru">
+<html lang="en">
 	<!-- Заголовок страницы, контейнер для других важных данных (не отображается) -->
 	<head>
 		<!-- Заголовок страницы в браузере -->
@@ -23,9 +23,9 @@
 					<br><br>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
 					<ul>
 						<li>Put on this page information about your product</li>
-						<li>A detailed description of your product</li>
+						<li class="current">A detailed description of your product</li>
 						<li>Tell us about the advantages and merits</li>
-						<li>Associate the page with the payment system</li>
+						<li class="done">Associate the page with the payment system</li>
 					</ul>
 					<a href="#">Full Story</a>
 				</div>
