Finish css_6 task

--- a/css_6/css_6/css_6/index.html
+++ b/css_6/css_6/css_6/index.html
@@ -13,77 +13,30 @@
 	</head>
 	<!-- Отображаемое тело страницы -->
 	<body>
-		<div class="block">
-			<p>
-				<a href="http://google.com" class="link">Lorem</a> ipsum dolor sit amet, consectetur adipisicing elit. Illo, eveniet. Quaerat molestiae veritatis beatae iure dolor, libero commodi ipsam dignissimos inventore, laborum vitae odio minima dolores hic, debitis corrupti asperiores?
-			</p>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur ab, a rem consequatur autem officiis eligendi. Aperiam ut voluptatum quia iure nam eaque, consequuntur magni et. Ullam magni, provident alias!
-			</p>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit minima saepe, cum laboriosam molestiae ipsum maxime, reprehenderit quae sunt accusantium! Tempore dicta enim aut, distinctio praesentium libero animi ab eum?
-			</p>
+		<div class="layout">
+			<div class="container">
+				<ul>
+					<li>Put on this page information about your product</li>
+					<li>A detailed description of your product</li>
+					<li>Tell us about the advantages and merits</li>
+					<li>Associate the page with the payment system</li>
+				</ul>
+				<ul>
+					<li>Put on this page information about your product</li>
+					<li>A detailed description of your product</li>
+					<li>Tell us about the advantages and merits</li>
+					<li>Associate the page with the payment system</li>
+				</ul>
+				<div class="buttons">
+					<a href="$1"><span class="text">Full story</span><span class="arrow">→</span></a>
+					<a href="$2"><span class="text">Full story</span><span class="arrow">→</span></a>
+					<a href="$3"><span class="text">Full story</span><span class="arrow">→</span></a>
+				</div>
+				<div class="inputs">
+					<input type="text" name="f1" id="f1">
+					<input type="text" name="f2" id="f2">
+				</div>
+			</div>
 		</div>
-		<form action="#">
-			<input type="text" class="textinput" />
-			<button class="textbutton" type="submit">Отправить</button>
-		</form>
-		<ul class="list">
-			<li>text</li>
-			<li>text</li>
-			<li>text</li>
-			<li>text</li>
-			<li>text</li>
-		</ul>
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
 	</body>
 </html>
